syntax = "proto3";
package model;

option java_package = "com.iot.common.model";
option java_outer_classname = "KafkaMsg";

message KafkaMsgPb {
    string channelId = 1;
    string clientId = 2;
    int64 msgId = 3;//BaseMsg里面的msgId
    bytes data = 4;//BaseMsg里面的data
}